# dapps-vara-man

./: .gitignore  CHANGELOG.md  Makefile
.github/workflows/: build.yml  docker-ci.yml  gh-pages.yaml
frontend/: .env.example  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: global.css
frontend/src/app/: consts.ts  utils.ts
frontend/src/app/context/: ctx-app.tsx  ctx-game-score.tsx  ctx-game.tsx
frontend/src/app/hocs/: index.tsx
frontend/src/app/hooks/: use-game.tsx  use-level.ts  use-metadata.ts
frontend/src/app/types/: game.ts
frontend/src/assets/meta/: vara_man_game.meta.txt
frontend/src/assets/styles/: index.scss
frontend/src/components/common/: account-gas-balance.tsx  popup-container.tsx
frontend/src/components/common/account-button/: account-button.tsx
frontend/src/components/common/accounts-list/: accounts-list.tsx
frontend/src/components/common/gas-wallet/: gas-wallet.tsx
frontend/src/components/common/get-gas-balance/: get-gas-balance.tsx
frontend/src/components/layout/footer/: footer.tsx
frontend/src/components/layout/header/: header-account.tsx  header-admin.tsx  header-logo.tsx  header.tsx
frontend/src/components/layout/header/account/: account.tsx
frontend/src/components/layout/header/logo/: logo.tsx
frontend/src/components/layout/wallet/: WalletModal.module.scss  wallet-modal.tsx
frontend/src/components/popups/: champions-popup.tsx  select-account-popup.tsx
frontend/src/components/popups/select-account-popup/: select-account-popup.tsx
frontend/src/components/sections/game/: game-canvas.tsx  game-field.tsx  game-init.tsx  game-modal.tsx  game-nav-champions.tsx  game-nav-item.tsx  game-nav.tsx  game-pacman.ts  game.module.scss
frontend/src/components/sections/game/core/: Character.ts  Enemy.ts  GameEngine.ts  QuadTree.ts  TileMap.ts  const.ts  game.module.scss  index.tsx
frontend/src/components/sections/home/: home-background.tsx  home-register-form.tsx  home-register.tsx
frontend/src/components/sections/levels/: levels-background.tsx  levels-choose.tsx  levels-easy.tsx  levels-hard.tsx  levels-medium.tsx  levels-mode-content.tsx  levels-select-mode.tsx  levels-start-action.tsx
frontend/src/components/ui/: icons.tsx  scroll-area.tsx  tabs.tsx
frontend/src/pages/: game.tsx  home.tsx  index.tsx  levels.tsx  rules.tsx
game/: Cargo.toml
game/src/: contract.rs  lib.rs
game/tests/: claim_reward.rs  node_tests.rs  register_player.rs  start_game.rs
game/tests/utils/: vara_man.rs
game/tests/utils_gclient/: vara_man.rs
io/: Cargo.toml
io/src/: lib.rs
state/: Cargo.toml
