[package]
name = "vara-man-game"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
hashbrown = "0.13.2"
vara-man-io = { path = "../io" }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
subxt = { version = "0.27", default-features = false }
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
tokio = "1"
blake2-rfc = { version = "0.2.18", default-features = false }

[build-dependencies]
vara-man-io = { path = "../io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []
