[package]
name = "vara-man-io"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
