[package]
name = "vara-man-state"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d", features = ["codegen"] }
vara-man-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d", features = ["metawasm"] }
